<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_CHPControlMode" Id="{a727c04b-ec53-4772-acf5-7e667b69212a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CHPControlMode :
(
	constantPower := 0, 
	supplyTemperature := 1
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>